# 3D-Renderer

./: .gitmodules  CMakeLists.txt  README.md
src/: allocation.h  allocator.cpp  allocator.h  asset.cpp  asset.h  buffer.cpp  buffer.h  descriptor.cpp  descriptor.h  image.cpp  image.h  input.cpp  input.h  main.cpp  pipeline.cpp  pipeline.h  render_buffer.cpp  render_buffer.h  render_context.cpp  render_context.h  render_manager.cpp  render_manager.h  staging.cpp  staging.h  swapchain.cpp  swapchain.h  thread_pool.cpp  thread_pool.h  vkutil.cpp  vkutil.h  window.cpp  window.h
src/render/: CMakeLists.txt  buffer.cpp  buffer.h  camera.cpp  camera.h  command.cpp  command.h  context.cpp  context.h  descriptor.cpp  descriptor.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  render.h  render_buffer.cpp  render_buffer.h  staging.cpp  staging.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h
